{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Actions",
            "id": "d7002342-42f5-4192-b781-18736cdc848a",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "9e4ef3dd-c742-4a90-bde6-cb6cbc5c0d71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "83d66030-e1e3-4f62-889e-0ffe8b2f417d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "4d5ad3ed-9f1d-48de-90c1-80bd4be36e00",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "7585562e-7d07-4dd4-9525-dc56781f2642",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Input",
                    "type": "Button",
                    "id": "7e2f2cc5-8d58-4a1a-a36c-f30f436cca3b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "93d66bde-9d35-4068-99ad-30cd63071fef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Remap",
                    "type": "Button",
                    "id": "5219ef48-5b8d-4c6b-a8c7-e1cb72b17eba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2ac64f71-f57a-454f-b515-087ef4b73b74",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Input",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57041e35-00ba-4302-b83e-8df844dcf6d8",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45f4ef74-dbcd-464d-a388-443390de2fc6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Remap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8361b6c-66e5-4b7d-8479-8dab07629862",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b3e45bd-5837-49a2-93de-69ce2446a98c",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f84e1993-7c8e-4136-be06-267739b5d71f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "203d7fbe-e238-4fc6-8562-119fbc36e8a7",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "b44bb2b0-185d-4982-81bd-5b2430a795af",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "2e7cc204-b4a4-4307-aa7c-fbcc471a652c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fdb1f404-6e56-4dc8-b570-66ca4c02ac6a",
                    "path": "*/{SecondaryTrigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1c75a18-cc0f-474d-98b6-57164aba6533",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}